--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,7 @@
     <!-- <include src="./partials/имя-файла.html"></include> -->
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
+
+    <script src="./index.js"></script>
   </body>
 </html>
